--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "editorjs-text-color-plugin": "2.0.2",
     "eslint-linter-browserify": "8.36.0",
     "export-svg": "0.2.0",
-    "gluesql": "latest",
+    "gluesql": "0.14.4-rc.1",
     "helia": "1.0.4",
     "immutable": "4.3.1",
     "ipfs-core": "0.12.2",
