--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
   "dependencies": {
     "@angular/animations": "15.2.5",
     "@angular/cdk": "15.2.5",
+    "@angular/common": "15.2.5",
+    "@angular/compiler": "15.2.5",
+    "@angular/core": "15.2.5",
+    "@angular/elements": "15.2.5",
+    "@angular/flex-layout": "15.0.0-beta.42",
+    "@angular/forms": "15.2.5",
+    "@angular/material": "15.2.5",
+    "@angular/platform-browser": "15.2.5",
     "@angular/platform-browser-dynamic": "15.2.5",
     "@angular/platform-server": "15.2.5",
     "@angular/router": "15.2.5",
@@ -24,19 +32,8 @@
     "@babel/types": "7.21.4",
     "@chainsafe/libp2p-noise": "12.0.0",
     "@chainsafe/libp2p-yamux": "4.0.1",
+    "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-html": "6.4.3",
-    "@angular/common": "15.2.5",
-    "@editorjs/list": "1.8.0",
-    "@editorjs/marker": "1.3.0",
-    "@editorjs/table": "2.2.2",
-    "@editorjs/warning": "1.3.0",
-    "@angular/compiler": "15.2.5",
-    "@angular/core": "15.2.5",
-    "@angular/elements": "15.2.5",
-    "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "15.2.5",
-    "@angular/material": "15.2.5",
-    "@angular/platform-browser": "15.2.5",
     "@codemirror/lang-javascript": "6.2.1",
     "@codemirror/lang-python": "6.1.2",
     "@codemirror/lang-sql": "6.5.4",
@@ -48,6 +45,10 @@
     "@editorjs/editorjs": "2.29.0-rc.4",
     "@editorjs/embed": "2.6.0",
     "@editorjs/header": "https://github.com/sanchezcarlosjr/header.git",
+    "@editorjs/list": "1.8.0",
+    "@editorjs/marker": "1.3.0",
+    "@editorjs/table": "2.2.2",
+    "@editorjs/warning": "1.3.0",
     "@fortawesome/fontawesome-free": "6.4.0",
     "@gear-js/api": "0.32.3",
     "@jsonforms/angular": "3.0.0",
