--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,5 +42,11 @@
       ],
       "rules": {}
     }
-  ]
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+  "env": {
+      "es6": true
+  }
 }
